refactor: Migrated to DiagnosticSink for streaming, remade api (now it does not return any diagnostics, they can be accesed through the configured sink), cleaned up some code (e.g. ParallelModuleDependencyLoader)