@@ -1,18 +1,18 @@
 package me.bottdev.meshdi.moduleit.core;
 
 import lombok.NonNull;
+import me.bottdev.kern.commons.diagnostic.DiagnosticSeverity;
+import me.bottdev.kern.commons.diagnostic.DiagnosticSink;
 import me.bottdev.kern.commons.diagnostic.DiagnosticsBuilder;
 import me.bottdev.kern.commons.diagnostic.ListDiagnostics;
-import me.bottdev.kern.commons.download.DownloadManager;
 import me.bottdev.meshdi.moduleit.api.ModuleHandle;
 import me.bottdev.meshdi.moduleit.api.ModuleLibrariesResult;
 import me.bottdev.meshdi.moduleit.api.ModuleLibraryLoader;
+import me.bottdev.meshdi.moduleit.api.ModuleLoadEnvironment;
 import me.bottdev.meshdi.moduleit.api.diagnostic.LibraryLoadDiagnostic;
 import me.bottdev.meshdi.moduleit.api.library.*;
-import me.bottdev.meshdi.moduleit.api.library.repositories.LocalMavenCache;
-import me.bottdev.meshdi.moduleit.api.library.repositories.RemoteMavenRepository;
+import me.bottdev.meshdi.moduleit.api.library.repositories.MavenRepositoryFactory;
 
-import java.net.http.HttpClient;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
@@ -21,80 +21,57 @@ import java.util.stream.Collectors;
 
 public class ParallelModuleLibraryLoader implements ModuleLibraryLoader {
 
+    private final ModuleLoadEnvironment environment;
     private final MavenRepositoryChain globalRepositoryChain;
     private final MavenDependencyResolver dependencyResolver;
     private final MavenBatchDownloader downloader;
-
-    private final HttpClient httpClient;
-    private final LocalMavenCache localCache;
-    private final DownloadManager downloadManager;
+    private final MavenRepositoryFactory repositoryFactory;
 
     private final Map<String, PomModel> sharedPomCache = new ConcurrentHashMap<>();
 
     public ParallelModuleLibraryLoader(
+            @NonNull ModuleLoadEnvironment environment,
             @NonNull MavenRepositoryChain globalRepositoryChain,
             @NonNull MavenDependencyResolver dependencyResolver,
             @NonNull MavenBatchDownloader downloader,
-            @NonNull HttpClient httpClient,
-            @NonNull LocalMavenCache localCache,
-            @NonNull DownloadManager downloadManager
+            @NonNull MavenRepositoryFactory repositoryFactory
     ) {
+        this.environment = environment;
         this.globalRepositoryChain = globalRepositoryChain;
         this.dependencyResolver = dependencyResolver;
         this.downloader = downloader;
-
-        this.httpClient = httpClient;
-        this.localCache = localCache;
-        this.downloadManager = downloadManager;
+        this.repositoryFactory = repositoryFactory;
     }
 
     private Set<LibraryRequirement> collectSharedRequirements(List<ModuleHandle> handles) {
-        Set<LibraryRequirement> sharedRequirements = new HashSet<>();
-        for (ModuleHandle handle : handles) {
-            for (LibraryRequirement library : handle.descriptor().libraries()) {
-                if (library.scope() != LibraryScope.SHARED) continue;
-                sharedRequirements.add(library);
-            }
-        }
-        return sharedRequirements;
+        return handles.stream()
+                .flatMap(handle -> handle.descriptor().libraries().stream())
+                .filter(library -> library.scope() == LibraryScope.SHARED)
+                .collect(Collectors.toSet());
     }
 
     private List<MavenRepository> createRepositories(ModuleHandle handle) {
         return handle.descriptor().repositories().stream()
-                .map(declaration -> new RemoteMavenRepository(
-                        declaration.id(),
-                        declaration.url(),
-                        httpClient,
-                        localCache,
-                        downloadManager
-                ))
-                .collect(Collectors.toList());
+                .map(declaration -> repositoryFactory.create(declaration.id(), declaration.url()))
+                .toList();
     }
 
     private MavenRepositoryChain createSharedRepositoryChain(List<ModuleHandle> handles) {
-
-        List<MavenRepository> customRepositories = new ArrayList<>();
-
-        for (ModuleHandle handle : handles) {
-            List<MavenRepository> repositories = createRepositories(handle);
-            customRepositories.addAll(repositories);
-
-        }
+        List<MavenRepository> customRepositories = handles.stream()
+                .flatMap(handle -> createRepositories(handle).stream())
+                .toList();
 
         return globalRepositoryChain.withRepositories(customRepositories);
-
     }
 
     private MavenRepositoryChain createIsolatedRepositoryChain(ModuleHandle handle) {
-        List<MavenRepository> repositories = createRepositories(handle);
-        return globalRepositoryChain.withRepositories(repositories);
-
+        return globalRepositoryChain.withRepositories(createRepositories(handle));
     }
 
     private CompletableFuture<Map.Entry<ModuleHandle, List<Path>>> resolveAndDownloadIsolatedAsync(
             ModuleHandle handle,
             Set<String> exclusions,
-            DiagnosticsBuilder<LibraryLoadDiagnostic> diagnosticsBuilder
+            DiagnosticSink<LibraryLoadDiagnostic> sink
     ) {
         Set<LibraryRequirement> requirements = handle.descriptor().libraries().stream()
                 .filter(requirement -> requirement.scope() == LibraryScope.ISOLATED)
@@ -105,7 +82,7 @@ public class ParallelModuleLibraryLoader implements ModuleLibraryLoader {
         }
 
         MavenRepositoryChain isolatedRepositoryChain = createIsolatedRepositoryChain(handle);
-        MavenResolutionContext context = new MavenResolutionContext(isolatedRepositoryChain, sharedPomCache, diagnosticsBuilder);
+        MavenResolutionContext context = new MavenResolutionContext(isolatedRepositoryChain, sharedPomCache, sink);
 
         return CompletableFuture.supplyAsync(() -> dependencyResolver.resolve(requirements, exclusions, context))
                 .thenCompose(resolved -> downloader.download(resolved, context))
@@ -126,12 +103,12 @@ public class ParallelModuleLibraryLoader implements ModuleLibraryLoader {
     public CompletableFuture<ModuleLibrariesResult> loadAll(@NonNull List<ModuleHandle> handles) {
 
         DiagnosticsBuilder<LibraryLoadDiagnostic> diagnosticsBuilder = ListDiagnostics.builder();
-        MavenRepositoryChain sharedRepositoryChain = createSharedRepositoryChain(handles);
+        DiagnosticSink<LibraryLoadDiagnostic> sink = environment.<LibraryLoadDiagnostic>createDiagnosticSink()
+                .andThen(diagnosticsBuilder::append);
+
         Set<LibraryRequirement> shared = collectSharedRequirements(handles);
+        MavenResolutionContext sharedContext = new MavenResolutionContext(createSharedRepositoryChain(handles), sharedPomCache, sink);
 
-        MavenResolutionContext sharedContext = new MavenResolutionContext(sharedRepositoryChain, sharedPomCache, diagnosticsBuilder);
-
-        // 1. Resolve and download Shared dependencies
         return CompletableFuture.supplyAsync(() -> dependencyResolver.resolve(shared, Set.of(), sharedContext))
                 .thenCompose(sharedResolved -> {
                     Set<String> isolatedExclusions = sharedResolved.stream()
@@ -140,20 +117,15 @@ public class ParallelModuleLibraryLoader implements ModuleLibraryLoader {
 
                     return downloader.download(sharedResolved, sharedContext)
                             .thenApply(sharedFetched -> {
-
                                 List<Path> sharedPaths = sharedFetched.stream()
                                         .map(MavenRepositoryChain.FetchedFrom::value)
                                         .toList();
-
                                 return new SharedData(isolatedExclusions, sharedPaths);
                             });
                 })
                 .thenCompose(sharedData -> {
-                    Set<String> isolatedExclusions = sharedData.exclusions();
-                    List<Path> sharedPaths = sharedData.paths();
-
                     List<CompletableFuture<Map.Entry<ModuleHandle, List<Path>>>> isolatedFutures = handles.stream()
-                            .map(handle -> resolveAndDownloadIsolatedAsync(handle, isolatedExclusions, diagnosticsBuilder))
+                            .map(handle -> resolveAndDownloadIsolatedAsync(handle, sharedData.exclusions(), sink))
                             .toList();
 
                     return CompletableFuture.allOf(isolatedFutures.toArray(CompletableFuture[]::new))
@@ -161,8 +133,7 @@ public class ParallelModuleLibraryLoader implements ModuleLibraryLoader {
                                 Map<ModuleHandle, List<Path>> isolatedMap = isolatedFutures.stream()
                                         .map(CompletableFuture::join)
                                         .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
-                                return new ModuleLibrariesResult(sharedPaths, isolatedMap, diagnosticsBuilder.build());
+                                return new ModuleLibrariesResult(sharedData.paths(), isolatedMap, diagnosticsBuilder.has(DiagnosticSeverity.ERROR));
                             });
                 });
     }
